--- a/doc/test/templates/nextflow/mock_minio.yaml
+++ b/doc/test/templates/nextflow/mock_minio.yaml
@@ -19,9 +19,9 @@ spec:
     - mountPath: /mnt/data
       name: data-volume
     env:
-        - name: MINIO_ACCESS_KEY
+        - name: MINIO_ROOT_USER
           value: "minio"
-        - name: MINIO_SECRET_KEY
+        - name: MINIO_ROOT_PASSWORD
           value: "minio123"
     
   volumes:
