feat: CLIN-4906 Update etl_import_fhir accordingly to new hpo ETL name

--- a/docker-compose-base.yaml
+++ b/docker-compose-base.yaml
@@ -16,6 +16,8 @@ x-airflow-common:
       condition: service_healthy
     postgres:
       condition: service_healthy
+  extra_hosts:
+      - "minio-external:host-gateway"
 
 services:
 
