feat: CLIN-4906 Get the env color for QA when DAG is scheduled

--- a/docker-compose-base.yaml
+++ b/docker-compose-base.yaml
@@ -18,6 +18,7 @@ x-airflow-common:
       condition: service_healthy
   extra_hosts:
       - "minio-external:host-gateway"
+      # - "elasticsearch:host-gateway"
 
 services:
 
